// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getProductById should return 404 if there is no product with such id 1`] = `
Object {
  "body": "{\\"error\\":{\\"message\\":\\"Product not exist\\"}}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 404,
}
`;

exports[`getProductById should return 500 if db throws 1`] = `
Object {
  "body": "{\\"error\\":{\\"message\\":\\"Couldn't load products from DB\\"}}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 500,
}
`;

exports[`getProductById should return product by id 1`] = `
Object {
  "body": "{
  \\"0\\": {
    \\"id\\": \\"123\\"
  }
}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;
